@@ -86,7 +86,14 @@ int check_for_expired_downtime(void);
 
 int add_host_downtime(char *,time_t,char *,char *,time_t,time_t,int,unsigned long,unsigned long,unsigned long);
 int add_service_downtime(char *,char *,time_t,char *,char *,time_t,time_t,int,unsigned long,unsigned long,unsigned long);
+
+/* If you are going to be adding a lot of downtime in sequence, set
+   defer_downtime_sorting to 1 before you start and then call
+   sort_downtime afterwards. Things will go MUCH faster. */
+
+extern int defer_downtime_sorting;
 int add_downtime(int,char *,char *,time_t,char *,char *,time_t,time_t,int,unsigned long,unsigned long,unsigned long);
+int sort_downtime(void);
 
 scheduled_downtime *find_downtime(int,unsigned long);
 scheduled_downtime *find_host_downtime(unsigned long);
